--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -14,13 +14,10 @@
 
 ## 弱攻撃のコンボ
 
-（反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
-（反撃設定 > ガードリバーサル: 何もしない）
-
 - 2LP/2LK, 2LP, 弱スピン-リンク
   - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
   - Sマレット(g), 前投げ
-  - 前投げ
+  - Sマレット(g), 後退: シミー
 - 2LP/2LK(g), 2LP, ガード
 
 ## 確反
@@ -30,18 +27,19 @@
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン
-  - SA3
   - DR 投げ
-- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, LK, 後退
+  - DR 後退: シミー
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, DI
 
 ## ジャンプ攻撃からのコンボ
 
+（ダミー設定 > ガード: 2段目以降ガード）
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - J.HK, 2MP, ODグライド-6P, J.HK, ...
   - {無敵技}, HP(pc), ...
-  - {何もしない}, 2MP, 弱グライド, ガード
+- J.HK(g), 2MP, 弱グライド, ガード
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
@@ -96,8 +94,21 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## ラッシュ下段
 
-- DR 2LK, MK
-- DR 2LK, MK
+- DR 2LK, MK-HK, 強ホーン
+  - DR 2LK, MK, ...: 目押し
+  - {端} HP: +4
+    - 前投げ
+    - 後退: シミー
+- {端} DR 2LK, MK-HK, 弱ホーン, 強昇竜
+  - LK: +4
+    - 前投げ
+    - 後退: シミー
+- DR 2LK(g), MK, 弱グライド-6P
+  - DR 2LK, MK, ...: 目押し
+  - {端} HP: +4
+    - 前投げ
+    - 後退: シミー
+- DR 2LK(g), MK, 弱グライド(g), ガード
 
 ## 中段の崩し
 
@@ -108,51 +119,10 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - ステップ, ガード
 - 6MK(g), ガード
 
-## ラッシュ中下段からのコンボ
-
-（ダミー設定 > ガード: ランダム）
-（ダミー設定 > 起き上がり: 後方受け身）
-
-- DR 6MK/2MK, MK-HK, 強ホーン
-  - ステップ, DR 2MK, ...
-  - ステップ, 6MK
-  - ステップ, 前進, ガード
-- {端} DR 6MK/2MK, MK-HK, 弱ホーン, 強昇竜
-  - LK, 前投げ
-  - LK, 後退
-
-## 弱グライドからの攻め
-
-（ダミー設定 > ガード: ランダム）
-
-- 弱グライド-6P
-  - 弱リンク-Sレオパード/Sハーベスト, ...
-  - 弱リンク-マレット(+2), 2LP, 弱スピン, ...
-  - 強リンク, 前投げ: 4F技に負ける
-  - 強リンク, 2LK, 2LP: 4F技と相打ち
-- 弱グライド(g), ガード
-
-## 中段の単発ヒット確認
-
-（ダミー設定 > ガード: ランダム）
-
-- 6MK-MK, DR 6MK, MK-HK, ...
-- 6MK-MK, DR 6MK(g), ガード
-- 6MK-MK, DR 前投げ
-- 6MK(g), ガード
-
 ## SA3
 
 - DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, SA3
 - DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, SA3
-
-## 中段からの崩し
-
-- 6MK-MK
-  - DR 6MK, MK-HK, 中ホーン
-  - {端} DR 6MK, MK-HK, 弱グライド-6P, J.HK, ...
-  - DR 6MK(g), MK
-- 6MK(g), ガード
 
 ## 下段からの崩し
 
