--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -7,6 +7,16 @@
 
 差し合いがまずトップクラスに強くて、攻めと守りも強い方。
 
+## 総合評価
+
+- 総合: B
+- 差し合い: A
+- 攻め: B
+  - 中央で攻めが切れやすい
+- 守り: C
+  - SA1に無敵がない
+  - 2LPの外で発生の早い技がない
+
 ## 性能
 
 - ステップが遅い (20F)
@@ -15,6 +25,7 @@
 - OD完全無敵技がある
 - 対空無敵技がある
 - 技の発生が遅い
+- 中央の前投げから攻めがない
 
 ## 技の長さ
 
