--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -56,6 +56,17 @@
 - 2LK(+4), MK-HK, 強ホーン: 1660
 - {端} 2LK(+4), MK-HK, 弱グライド-6P: 1660
 - {端} 2LK(+4), MK-HK, 弱ホーン, 強昇竜: 2100
+- 2LK(+4), MK-HK, ODスピン-Sハーベスト, 中ホーン: 2120
+- 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 2295
+- 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4295
+
+## MP(+1)
+
+- MP(+1), 2LP, 弱スピン: 1620
+- {立} MP(+1), 2LP, ODホーン, 強昇竜: 2700
+- {立} MP(+1), 2LP, ODホーン, 強昇竜: 2700
+
+カウンターヒット用。MP-MPよりも少し余裕がある。
 
 ## MP(+4)
 
