--- a/games/Street-Fighter/Six/characters/キャラの比較.md
+++ b/games/Street-Fighter/Six/characters/キャラの比較.md
@@ -85,3 +85,5 @@ SAの発生:
 個人的に、使っていて楽しかったのはマノンとリュウ。JPも一方的に蹂躙できると楽しい。
 強いと思ったのはザンギ、リュウ、ラシード、ケン。
 弱いと思ったのはダルシム、ガイル、ジェイミー、豪鬼。
+
+エレナは連勝ボーナスが実装されたおかげで24戦でマスターになった。初めてハイマスも踏んだ。
