--- a/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
@@ -28,3 +28,5 @@ HP(pc)から。ノーゲージでもかなり火力が出る。
 基本はMP(pc), MK-HKルート。少し離れていてもMPならコンボにしやすい。MKだと距離の判断が難しい。
 
 できればHP(pc)だけど、発生が遅いので難しい。まぁ、ガードされても-2なので狙ってもいい。
+
+シミーはMK(pc), 強スピンルートもある。
