--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -117,3 +117,5 @@
 エレナの中足は強いけど確認が難しすぎる。
 
 SA1に無敵がないのでBOするのはまずい。あとSAゲージもSA1で回すというよりは、SA2やSA3で使っていく。
+
+リンクシンクだけでなく、リンクソワールも入力方向によって距離が変わる。全体の発生は変わらないので、弱から前入れで伸びる。
