--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -118,11 +118,13 @@ ODグライドは安定する。
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, SA1, 強昇竜: 3181
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, SA1, 強昇竜: 3453
 - 2MP, CR MK, 2HP, 強スピン, SA2: 3453
-- 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODグライド, SA2: 3865
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODリンク-Sハーベスト, SA2: 4000
 - 2MP, CR MK, 2HP, 強ホーン, SA3: 4336
 - {端} 2MP, CR MK, 2HP, 強スピン, 中ホーン, SA3: 4781
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4971
 - 2MP, CR HP, MK-HK, ODスピン-リンク-MK, 中ホーン, SA3: 4904
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, 弱ホーン, SA3: 5076
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODリンク-Sハーベスト, 中ホーン, SA3: 5180
 
 ## MK
 
