--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -35,6 +35,23 @@
 - 2LP, 2LP, CR 2LP, 2HP, 強ホーン, SA3: 3671
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
 
+## 2LP, LK
+
+- 2LP, LK, 強昇竜: 1520
+- {立} 2LP, LK, 弱ホーン: 1310
+- {立端} 2LP, LK, 弱ホーン, 中昇竜: 1910
+- 2LP, LK, OD昇竜: 1660
+- 2LP, LK, CR 2LP, 2HP, 強スピン, 中ホーン: 1929
+- {端} 2LP, LK, CR 2LP, 2HP, 強スピン, 弱ホーン, 強昇竜: 2016
+- {立} 2LP, LK, ODホーン, 強昇竜: 2080
+- {立} 2LP, LK, ODホーン, SA1, 強昇竜: 2380
+- 2LP, LK, CR 2LP, 2HP, 強スピン, DR 2MP, CR 2HP, SA1, 強昇竜: 2527
+- {立} 2LP, LK, ODホーン, SA2: 2780
+- 2LP, LK, CR 2LP, 2HP, 強スピン, SA2: 2749
+- 2LP, LK, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
+
+Sレオパードの後とか、2LPが1回しか入らない場合はこれしか入らない。
+
 ## 2LP(+4)
 
 - 2LP(+4), 2HP, 強ホーン: 1850
@@ -293,7 +310,7 @@ MKは近くないと当たらない。
 
 ## Sレオパード
 
-モダンは生のSレオパードがにモダン補正が載るので240安い。
+モダンは生のSレオパードにモダン補正が載るので240安い。
 
 - Sレオパード, ODホーン: 2400
 - {端} Sレオパード, 強昇竜: 2600
@@ -308,6 +325,8 @@ MKは近くないと当たらない。
 - Sレオパード, ODホーン, SA2: 4360
 - Sレオパード, SA3: 4800
 - {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5873
+
+端はODホーン強昇竜が高い。中昇竜からDIもあり。
 
 ## Sハーベスト
 
@@ -377,6 +396,10 @@ MKは近くないと当たらない。
 - DI(g)(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 2888
 - DI(g)(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3168
 - DI(g)(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3104
+
+## SA1
+
+- SA1, 強昇竜: 2780
 
 ## その他
 
