--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -24,6 +24,11 @@ MPも発生が早くて長い。
 正直、2MPからキャンセルラッシュするくらいならMPや2MKをヒット確認してコンボに行けた方が強い。
 2MP, CR MKもガード時の状況が別に強いわけじゃないし。
 
+中央の6MK-MKはその後の状況がいいわけでもないので無理に狙わなくていい。単発で十分。
+
+6HPは差し返し気味に狙いたい。
+発声が遅いので、対策できている人だと止められる。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
@@ -31,6 +36,9 @@ MPも発生が早くて長い。
 
 長い技の発生が遅いので、相手の中足の距離では不利。
 2LPや2LKで暴れたり、4HKで下段を避けたりして離れるといい。
+
+MP/6MK/2MKがだいたい同じくらいの距離。
+この距離だと相手の前飛びに昇竜が当たりづらい。裏に抜けてしまう。あくまでも当てる時に一歩踏み込むイメージで。
 
 ## 離れたいとき
 
