--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -27,7 +27,12 @@ MPも発生が早くて長い。
 中央の6MK-MKはその後の状況がいいわけでもないので無理に狙わなくていい。単発で十分。
 
 6HPは差し返し気味に狙いたい。
-発声が遅いので、対策できている人だと止められる。
+発生が遅いので、対策できている人だと止められる。
+LKを空振りして6HPを止めにくるのを誘ってから6HPで差し返すのもいい。
+
+2LPから2MKまでの中間距離が苦手なので、LKやMKを置いて埋めたり、さっさと離れたりするといい。
+
+中途半端な距離では無理せずバクステやバックジャンプで距離を空けるのもいい。
 
 ## 差し合いの距離
 
@@ -78,6 +83,8 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 - MP-MP: 発生8F、2MPより長い
 - HP: 発生12F、中央でも3600減る
 - 2HK: 発生11F、遠めの確反とか
+
+差し返しよりも、いっそ-1からMKを置く方が強いかも。8Fの中足を潰す狙い。
 
 ## 牽制
 
