--- a/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
@@ -7,11 +7,12 @@ HP(pc)が狙えるならできるだけ狙う。
 
 ## 6F
 
-MKが届くならMK-HKルートか、MK, 2HPルート。主にDリバの確反。
+MKが届くならMK(pc), 強スピンが安定。特にDリバはちょっと離れるのでMK(pc), 2HPが入らない。
+密着ならMK(pc), 2HPが最大。
 
 ## 8F
 
-ちょっと遠めでも前に出てくれるのでMP, MK-HKルートが使いやすい。特にシミーなど。
+2MP(pc), 強スピンが安定。
 
 ## 12F
 
@@ -25,8 +26,7 @@ HP(pc)から。ノーゲージでもかなり火力が出る。
 
 ## シミー
 
-基本はMP(pc), MK-HKルート。少し離れていてもMPならコンボにしやすい。MKだと距離の判断が難しい。
+安定は2MP(pc), 強スピンのルート。
+MK(pc), 強スピンの方が発生は早いけど、下がりすぎると届かないことがある。
 
-できればHP(pc)だけど、発生が遅いので難しい。まぁ、ガードされても-2なので狙ってもいい。
-
-シミーはMK(pc), 強スピンルートもある。
+HP(pc)に行けたら一番いい。
