--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -538,3 +538,5 @@ Sマレット(g)と基本的に同じでいい。
 エレナの40Fくらいの起き攻め、基本的に弱リンクで差し合いに戻るか、レオパードやマレットで突っ込むか、どっちかでいいのかも。あまり投げにいけない。
 
 エレナはシミーできる状況が多いけど、中央の投げがそもそも弱い。
+
+まだ1ヶ月だけど、レジェンド帯のエレナは端の締めが弱昇竜からMK持続当て狙いが多い。さすがにガードさせた後の状況もいいし、王道ではあるかも。
