--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -49,11 +49,21 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 （ドライブインパクトへの対応練習）
 
 - DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン
-  - 弱リンク, 後退
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜
-  - LK, 後退
-  - LK; 前投げ: 目押しで重ねる
-  - LK, MK(+1), MK-HK, 弱グライド-6P, J.HK, MK-HK, ...
+  - 弱リンク-3Sレオパード
+    - ODホーン
+      - 弱リンク-Sレオパード
+    - {端} ODホーン, 強昇竜
+      - LK, 前投げ
+      - LK, 後退: シミー
+  - 弱リンク-3Sレオパード(g), 後退
+  - 弱リンク, ガード
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜
+  - 弱リンク, MK(+3), MK-HK, 弱ホーン, 強昇竜
+    - LK, 前投げ
+    - LK, 後退: シミー
+  - 弱リンク, MK(+3)(g)
+    - 前投げ
+    - 後退: シミー
 
 ## 壁インパクト
 
