--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -29,7 +29,7 @@
 - {立} 2LP, 2LP, ODホーン, SA2: 2780
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA2: 2749 (h:2409)
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, ODグライド-6P, SA2: 3069
-- 2LP, 2LP, SA3: 2779
+- 2LP, 2LP, SA3: 3340
 - {立} 2LP, 2LP, 弱ホーン, SA3: 3310
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA3: 3629
 - 2LP, 2LP, CR 2LP, 2HP, 強ホーン, SA3: 3671
@@ -57,6 +57,21 @@ Sレオパードの後とか、2LPが1回しか入らない場合はこれしか
 - 2LP(+4), 2HP, 強ホーン: 1850
 - 2LP(+4), MK-HK, ODスピン-リンクMK, 中ホーン: 2220
 - 2LP(+4), MK-HK, ODスピン-リンクMK, SA2: 3560
+
+## 2LP(+4), 2MP
+
+- 2LP(+4), 2MP, 弱グライド-6P: 1700
+- 2LP(+4), 2MP, 中スピン: 1480
+- 2LP(+4), 2MP, ODグライド-6P: 2000
+- 2LP(+4), 2MP, ODスピン, 中ホーン: 2080
+- {端} 2LP(+4), 2MP, ODスピン, 弱ホーン, 強昇竜: 2450
+- {立} 2LP(+4), 2MP, ODホーン, 強昇竜: 2320
+- 2LP(+4), 2MP, ODグライド-6P, SA2: 3256
+- 2LP(+4), 2MP, 弱グライド-6P, SA3: 3700
+- 2LP(+4), 2MP, 中スピン, SA3: 3480
+- 2LP(+4), 2MP, ODスピン, DR 2MP, 強ホーン, SA3: 4174
+
+MKや2HPは近くないと届かないので2MPの方が確実。
 
 ## 2LK
 
