--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -23,14 +23,24 @@
 
 ## 確反
 
-（反撃設定 > ダウンリバーサル: 通常投げ）
 （反撃設定 > ダウンリバーサル: 無敵技）
-（反撃設定 > ダウンリバーサル: 何もしない）
 
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン
-  - DR 投げ
-  - DR 後退: シミー
-- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, DI
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
+  - 弱リンク-3Sレオパード
+  - ODホーン
+    - 弱リンク-Sレオパード
+  - {端} ODホーン, 強昇竜
+    - LK, 前投げ
+    - LK, 後退: シミー
+  - 弱リンク-3Sレオパード(g), 後退
+  - 弱リンク, ガード
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
+  - 弱リンク, MK(+3), MK-HK, 弱ホーン, 強昇竜
+    - LK, 前投げ
+    - LK, 後退: シミー
+  - 弱リンク, MK(+3)(g)
+    - 前投げ
+    - 後退: シミー
 
 ## ジャンプ攻撃からのコンボ
 
@@ -48,28 +58,18 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 （ドライブインパクトへの対応練習）
 
-- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン
-  - 弱リンク-3Sレオパード
-    - ODホーン
-      - 弱リンク-Sレオパード
-    - {端} ODホーン, 強昇竜
-      - LK, 前投げ
-      - LK, 後退: シミー
-  - 弱リンク-3Sレオパード(g), 後退
-  - 弱リンク, ガード
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜
-  - 弱リンク, MK(+3), MK-HK, 弱ホーン, 強昇竜
-    - LK, 前投げ
-    - LK, 後退: シミー
-  - 弱リンク, MK(+3)(g)
-    - 前投げ
-    - 後退: シミー
+- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, ...
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, ...
+
+起き攻めは確反のルートと同じ。
 
 ## 壁インパクト
 
-- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, DI, ...
+- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, ...
 
 ヒットもガードも同じルートでいい。
+
+起き攻めは確反のルートと同じ。
 
 ## キャンセルラッシュ
 
