--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -174,3 +174,11 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 弱グライド単発ヒット確認もできるので、できるなら頑張る。
 MK-HK(g), 弱グライドは4F技で割り込まれるので、J.HKをガードされた時はできればMK, 弱グライドにすると割り込まれない。
+
+## 6Fの確反
+
+- MK(pc), 強スピン, 中ホーン
+
+## 4Fの確反
+
+- 2LP(pc), 2MP, 弱グライド-6P
