--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -21,9 +21,16 @@
   - Sマレット(g), 後退: シミー
 - 2LP/2LK(g), 2LP, ガード
 
-## 確反
+## 昇竜やSAの確反
 
-（反撃設定 > ダウンリバーサル: 無敵技）
+（確定反撃の練習）
+
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
+  - 弱リンク, 後退
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
+  - 弱リンク, 後退
+
+## 確反
 
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
   - 弱リンク-3Sレオパード
@@ -35,12 +42,6 @@
   - 弱リンク-3Sレオパード(g), 後退
   - 弱リンク, ガード
 - {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
-  - 弱リンク, MK(+3), MK-HK, 弱ホーン, 強昇竜
-    - LK, 前投げ
-    - LK, 後退: シミー
-  - 弱リンク, MK(+3)(g)
-    - 前投げ
-    - 後退: シミー
 
 ## ジャンプ攻撃からのコンボ
 
@@ -59,17 +60,29 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 （ドライブインパクトへの対応練習）
 
 - DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, ...
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, ...
 
 起き攻めは確反のルートと同じ。
 
-## 壁インパクト
+## 壁インパクトと端の攻め
 
-- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, ...
+- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, 弱リンク
+  - MK(+3), MK-HK, 弱ホーン, 強昇竜, LK
+    - 前投げ, DI, ...
+    - 後退: シミー
+  - MK(+3)(g), 前投げ, DI, ...
+  - MK(+3)(g), 後退
 
 ヒットもガードも同じルートでいい。
 
 起き攻めは確反のルートと同じ。
+
+## 端の投げループ
+
+（反撃設定 > ダウンリバーサル: 通常投げ）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- {端} 前投げ, DR 前投げ
+- {端} 前投げ, DR 2LK, ガード, {通常投げ}, 2MP, 強スピン, 弱ホーン
 
 ## キャンセルラッシュ
 
