--- a/shared/government/democracy/政党.md
+++ b/shared/government/democracy/政党.md
@@ -3,4 +3,11 @@
 
 日本は貧乏人が成金政党を支持している。
 
-立憲民主党は中身がカスカスで政権は渡せないけど、与党のやることを遅延する、というだけの意味はある。
+立憲民主党は中身がカスカスで政権は渡せないけど、無能な与党のやることを遅延する、というだけの意味はある。
+
+国民民主党はやる気は感じるんだけど政治が下手すぎる。
+ただ、方針としては悪くない。
+
+賛成党や保守党は反科学のスピリチュアル政党でしかも帝国制を指向しているので論外。
+
+自民党と公明党は30年の停滞期を作った戦犯なので論外。
