--- a/shared/war/侵略.md
+++ b/shared/war/侵略.md
@@ -14,3 +14,7 @@
 
 狩猟採集は群れを大きくできないので侵略に弱い。
 個が極端に強いなら数を増やさなくても侵略を防げるので、狩猟採集でも群を維持できる。
+
+侵略戦争がないと領土も変わらない。領土はあくまでもたまたま最後に侵略した国が持っているだけなので、その前は次に侵略する国が持っていたかもしれない。だから、侵略するということ自体はどちらに正義があるかわからない。
+
+誰のものでもない自然や土地を自分のもののように占有しようとする人を殺すのは侵略かどうか。
