--- a/shared/war/餌.md
+++ b/shared/war/餌.md
@@ -25,3 +25,7 @@
 
 自分が餌にされそうなら、敵対しなければならない。
 Lose-Winの関係をLose-Loseに持っていく。
+
+餌はできるだけ生かして、いざ食べるときに一気に搾る。
+
+敵は殺さないといけないけど、敵ではないのに殺すと損してしまう。その人は友になるかもしれないし、客になるかもしれないし、餌になるかもしれない。
