--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -102,6 +102,8 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 
 J.MP-MPの空対空から昇竜やSA1、ODホーンで拾えてわりと火力が出る。
 
+端はできれば空対空を狙いたいが、安定しにくい。
+
 ## 攻め
 
 中央の投げが弱いので、できるだけ中下段やシミーの打撃で崩したい。
