--- a/shared/breath/training/tips/横隔膜を下げる.md
+++ b/shared/breath/training/tips/横隔膜を下げる.md
@@ -172,3 +172,5 @@ https://youtube.com/watch?v=kfUlPS8VuOo&si=oFG8I0Q5oRiJqC9R
 歌ったりして連続して声を出しているとどれだけ抑えようとしても横隔膜は上がってくる。隙を見てリセットしないといけない。
 
 横隔膜を下げて息を止めてないと、声を出した時に無駄に息が漏れてか細い声になる。特に高音が「鍛えてない高音」に聞こえる。
+
+横隔膜を下げるときは腹筋に力を入れる感覚とは違う。
