--- a/shared/communication/frameworks/assertion/根拠.md
+++ b/shared/communication/frameworks/assertion/根拠.md
@@ -119,3 +119,5 @@ explanation も参照。
 「映画が面白かった」であれば、特定のシーン、ストーリー、キャラクター、など。
 
 証拠や根拠は誰かを納得させるためのもので、別に相手が納得しなくてもいいなら必要ない。権力や暴力でねじ伏せるとか、すでに相手が誰からも大事にされてないとか。
+
+根拠も示さずに「自分は正しい」というやつは正しくない。
