--- a/shared/breath/息の支え.md
+++ b/shared/breath/息の支え.md
@@ -12,3 +12,7 @@
 息を吐きすぎると吸う時に胸式呼吸になりやすい。
 
 やっぱり喉を楽にして、腹からの息でsのロングトーンを安定させるのが先決か。息が安定した指標の一つになる。
+
+息を強く吐き切った後で力を抜いた時に、息が入ってくるようなら支えられてない。息が出ていくようなら支えられている。
+
+強く息を吐き切った後に肺に十分な量の空気が残ってないといけない。息の支え。
