--- a/shared/collaboration/organization/組織と個人.md
+++ b/shared/collaboration/organization/組織と個人.md
@@ -82,3 +82,10 @@
 評価というのは本来人間扱いではない。
 
 組織に所属する個人は自分のできる範囲で仕事するだけ。個人の領分を超えた仕事は組織の仕事だ。組織に所属する以上、組織の仕事を個人に負わせるのは許されない。それは上司の無能の証明であって、部下の問題ではない。
+
+組織はある程度能力を揃えた方が運用しやすい。無能の中に一人だけ性能が高い人が混じっていても噛み合わないし、逆に有能な人ばかりの中に無能が一人混じっていたら邪魔になる。
+無能は無能、有能は有能で集めた方がいい。その上で、役割を分けて、緩やかに連携させる。密にしすぎると影響を受けやすくなるので避ける。
+
+組織の中で飛び抜けた者は分離しないといけない。上司にするのも良くない。上司でも部下でも、体制的に近い位置の者は同じくらいの能力が望ましい。人数が少なかったら独立した遊軍のように使うべきで、多かったら集めてチームや部署にする。研究職なんかが代表的。
+
+組織としての能力は下に揃ってしまう。能力差があれば分離してお互いに影響しないようにするべき。
