--- a/shared/execution/programming/プログラム.md
+++ b/shared/execution/programming/プログラム.md
@@ -64,3 +64,7 @@ ProgramはProjectよりも前にある。
 プログラムとは実行計画、つまり、実行可能な計画である。
 実行可能とは、限られた時間と資源の中で処理できることである。
 計画とは、順序がつけられた処理の集合である。
+
+プログラムは実行可能な計画のこと。コンピュータ用語ではない。開会式とかセレモニーのスケジュールなんかもプログラム。
+
+コンピュータプログラムはコンピュータが実行するためにコンピュータが読み取れる言葉で書く。
