--- a/shared/voice/training/tips/ビブラートをかける.md
+++ b/shared/voice/training/tips/ビブラートをかける.md
@@ -116,3 +116,5 @@ https://youtube.com/watch?v=OiaaZBhYXr8&si=mZ_JMf_Nu_DebYaN
 そうではなく、腹でビブラートを作る。
 
 ビブラートが小さくなりすぎるのはまだ呼吸のコントロールが不安定。ただ、自然にビブラートがかかるのは方向性としては悪くないはず。
+
+息を支えると自然とビブラートがかかる。
