--- a/shared/information/tips/マスコミを信じない.md
+++ b/shared/information/tips/マスコミを信じない.md
@@ -1,2 +1,4 @@
 今回の選挙でもわかるように、マスコミというのは金儲けだけを目指しているコウモリでしかない。言っていることをまともに受け止めるのは間違い。
 選挙前には自民党の裏金問題をこき下ろして、選挙後には大きく躍進した国民民主党の話題で視聴率を稼ぎたいだけ。内容はなんでもいいのだ。
+
+オールドメディアが悪いとするなら、それも政治が悪い。情報の質が低いならチャンネルを増やせばいい。日本は特にテレビのチャンネルが少なすぎる。
