--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -134,6 +134,8 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 48-52Fも2段目のみヒットになるけど安いのであまり使いたくない。
 
+生のハーベストは強化版でも強いわけじゃないのでコンボ用かも。単発で使う利点があまりない。一応、ゲージを使わなくても少し火力を伸ばしやすいくらい。
+
 ## マレット(+2): 39, 41, 42
 
 強弱でタイミングを変えて持続当てできる。
