--- a/games/shogi/次の一手を考える.md
+++ b/games/shogi/次の一手を考える.md
@@ -3,3 +3,6 @@
 - 守らないといけないか
 
 まずは守る手から考える。
+
+将棋で駒を取るときは取った後のことも考えないといけない。
+駒が他の駒で支えられているからといって、その駒で取り返すと形が崩されるようでは相手の攻めが続いてしまう。特に大駒は攻めにも複数箇所に効いていて、一つのズレが大きな影響力を持っている。
