--- a/shared/documentation/ドキュメント.md
+++ b/shared/documentation/ドキュメント.md
@@ -43,3 +43,5 @@
 ドキュメントは読まれないが、必要に応じて必要な情報を探せるように「書いておく」のは大事。その上で、先に周知すべきことはドキュメント以外でも通達するべき。
 
 ドキュメントはあるんだけどうまく集約できてないと、役に立たない。知られてないドキュメントには意味がない。
+
+「ドキュメントは最新じゃない。『昔いた誰かの希望』だ。最新は常にSlackにある」
