--- a/shared/execution/programming/debug/バグ.md
+++ b/shared/execution/programming/debug/バグ.md
@@ -8,3 +8,5 @@ testing & debugging によって、プログラムを直していく。
 
 「バグ」を「裏技」と呼び変えて、裏技を見つけた人にはガバスを付与する制度。（ファミ通ネタ）
 https://x.com/ebiebi_pg/status/1836723721878569065
+
+「動かないって言われたら『どこがどう動かないか』ではなく『誰が動かないと言ったか』をまず調べろ。重要なのは感情ログ」
