--- a/shared/leisure/examples/travel/jp/関東.md
+++ b/shared/leisure/examples/travel/jp/関東.md
@@ -5,3 +5,7 @@
 多摩なら新横浜、23区なら東京か品川に出て新幹線に乗る。あとは小田原や熱海で降りて行きたいところに行けばいい。
 
 箱根は12月-2月辺りが閑散期でホテルも安い。
+
+立川と鎌倉の間は武蔵小杉で湘南新宿線に乗り換えた方が良さそう。湘南新宿線に長く乗るのが早い。新川崎は改札を出ないといけないので乗り換えにくい。
+
+混む時期の鎌倉はレンタサイクルが一番早い説ある。特にバスがカス。どうせ立ちっぱなしになるし、道が混み過ぎて踏切にも引っかかるから遅い。
