--- a/shared/science/神秘.md
+++ b/shared/science/神秘.md
@@ -91,3 +91,5 @@ https://twitter.com/zunzun428/status/1717374493554028880
 「起きないから奇跡って言うんですよ」
 「起きる可能性が少しでもあるから、だから奇跡って言うんだ」
 （『Kanon』）
+
+神秘主義や反科学というのは、つまり再現性がないということ。
