--- a/shared/society/leadership/リーダー.md
+++ b/shared/society/leadership/リーダー.md
@@ -84,3 +84,8 @@ https://x.com/coffee_nomimasu/status/1832985764860399885
 先頭に出ないとリーダーとは言えない。
 
 リーダーの重要な役割は決めること。まず先頭を歩くのがリーダー。ディレクターの一種。ディレクターでも指示するだけで先頭を歩かないならリーダーとは言えない。
+
+理解できないものにビビる臆病者はリーダーにふさわしくない。
+
+「鶏口となるも牛後となるなかれ」（中国の故事）
+大きな集団の末端にいるよりも、小さな集団のリーダーとして活躍する方がいい、という教え。
