--- a/study/politics/権力と暴力の違い.md
+++ b/study/politics/権力と暴力の違い.md
@@ -82,3 +82,6 @@ engagement の目的は権力だ。
 暴力に戻ってしまった権力には、暴力で対抗するしかない。
 
 誰にも抑えられない暴力はもう権力でしかない。
+
+みんなが黙っていれば不正が育つ。
+Injustice grows where silence lives.
