--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -299,3 +299,6 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 卓越を目指す。
 
 意識せずに自然とそうなっているのはアートとは言えない。
+
+「心に素直であろうとする姿勢、それは芸術に対する愛です」
+『ガールクラッシュ』
