--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -158,3 +158,5 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 
 カラオケが広まったことで、ミセスみたいに高い声を出す技術だけで凡人でも歌える曲が流行るようになったのかも。
 昭和歌謡とか声が良すぎて凡人が歌ってもあまり決まらないし。
+
+昭和の歌は本当に天才のものだったけど、平成や令和の歌は凡才でも歌える。良くも悪くも。
