--- a/shared/voice/mechanism/声帯の動き.md
+++ b/shared/voice/mechanism/声帯の動き.md
@@ -82,3 +82,5 @@ https://youtube.com/watch?v=EuYw491guEI&si=KMAh5pWemOLEj4j4
 声帯を伸ばすためには、声帯を柔らかくして、声帯を伸ばす筋肉を鍛えないといけない。
 
 首の後ろに輪状軟骨を支える筋肉がある。輪状軟骨を支えるとさらに声帯を伸ばしやすくなる。
+
+声帯を閉じておいて、声を出すときに開く感覚で声を出す。
