--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -13,14 +13,6 @@
 起き攻めは多少重なってなくてもいい。
 慣れるまではガードされていても6HP-HPまで出してしまっていい。
 
-## 弱攻撃のコンボ
-
-- 2LP/2LK, 2LP, 弱スピン-リンク
-  - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
-  - Sマレット(g), 前投げ
-  - Sマレット(g), 後退: シミー
-- 2LP/2LK(g), 2LP, ガード
-
 ## 昇竜やSAの確反
 
 （確定反撃の練習）
@@ -30,22 +22,8 @@
 - {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
   - 弱リンク, 後退
 
-## 確反
-
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
-  - 弱リンク-3Sレオパード
-  - ODホーン
-    - 弱リンク-Sレオパード
-  - {端} ODホーン, 強昇竜
-    - LK, 前投げ
-    - LK, 後退: シミー
-  - 弱リンク-3Sレオパード(g), 後退
-  - 弱リンク, ガード
-- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
-
 ## ジャンプ攻撃からのコンボ
 
-（ダミー設定 > ガード: 2段目以降ガード）
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
@@ -55,51 +33,51 @@
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
+## 端のインパクトと弱昇竜からの攻め
+
+（反撃設定 > ダウンリバーサル: 通常投げ 3Fディレイ）
+（反撃設定 > ダウンリバーサル: 何もしない）
+（反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜, 弱リンク
+  - MK(+3), MK-HK, 弱ホーン, 強昇竜, LK
+    - 前投げ, DI, ...
+    - 後退, {通常投げ}, 2MP: シミー
+  - MK(+3)(g), 前投げ, DI, ...
+  - MK(+3)(g), 後退, {通常投げ}, 2MP: シミー
+  - 後退, {通常投げ}, 2MP: シミー
+
+ヒットもガードも同じルートでいい。
+
+## 端のキャンセルラッシュと強昇竜からの攻め
+
+（反撃設定 > ダウンリバーサル: 通常投げ）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜, LK
+  - 前投げ, ...
+  - 後退, {通常投げ}, 2MP, CR MK, ...
+- 2MP(g), CR MK: 連続ガードで+5
+  - 前投げ: 最速は空振りするので、1F遅らせる
+  - 後退, {通常投げ}, 2MP, CR MK, ...
+
 ## インパクト返し
 
 （ドライブインパクトへの対応練習）
 
 - DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, ...
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, ...
 
 起き攻めは確反のルートと同じ。
 
-## 壁インパクトと端の攻め
-
-- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, 弱リンク
-  - MK(+3), MK-HK, 弱ホーン, 強昇竜, LK
-    - 前投げ, DI, ...
-    - 後退: シミー
-  - MK(+3)(g), 前投げ, DI, ...
-  - MK(+3)(g), 後退
-
-ヒットもガードも同じルートでいい。
-
-起き攻めは確反のルートと同じ。
-
-## 端の投げループ
+## 端の投げループとシミー
 
 （反撃設定 > ダウンリバーサル: 通常投げ）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- {端} 前投げ, DR 前投げ
-- {端} 前投げ, DR 2LK, ガード, {通常投げ}, 2MP, 強スピン, 弱ホーン
-
-## キャンセルラッシュ
-
-（反撃設定 > ダウンリバーサル: 4F技）
-（反撃設定 > ガードリバーサル: 4F技）
-
-- 2MP, CR MK, 2HP, 強スピン
-  - ステップ 2回, 前進, 前投げ
-  - ステップ 2回, 前進, 後退: シミー
-- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜
-  - LK, 前投げ
-  - LK, 後退: シミー
-- 2MP(g), CR MK: 連続ガードで+5
-  - 前投げ: 最速は空振りするので、1F遅らせる
-  - 後退: シミー
-
-4F技で割り込まれないように練習する。
+- {端} 前投げ, DR 前投げ, ...
+- {端} 前投げ, DR 2LK, ガード, {通常投げ}, 2MP, CR MK, ...
 
 ## 弱攻撃から伸ばすコンボ
 
@@ -109,10 +87,18 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## Sレオパードを使った攻め
 
-- Sレオパード
-  - ステップ 2回, 前進, 前投げ
-  - ステップ 2回, 前進, 後退: シミー
-  - {端} ODホーン, 中昇竜, DI
+- 6HP-HP-HP, 弱リンク
+  - Sレオパード, ODホーン, 弱リンク, ...
+  - ガード
+  - {端} Sレオパード, ODホーン, 弱昇竜, ...
+
+## 弱攻撃のコンボ
+
+- 2LP/2LK, 2LP, 弱スピン-リンク
+  - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
+  - Sマレット(g), 前投げ
+  - Sマレット(g), 後退: シミー
+- 2LP/2LK(g), 2LP, ガード
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
@@ -143,11 +129,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - ステップ, ガード
 - 6MK(g), ガード
 
-## SA3
-
-- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, SA3
-- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, SA3
-
 ## 下段からの崩し
 
 （ガード: ランダム）
@@ -160,6 +141,14 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - DR MK, MK
   - DR 前投げ: 少し長めに走って目押しで重ねる
 - 2MK(g), ガード
+
+## 6Fの確反
+
+- MK(pc), 強スピン, 中ホーン
+
+## 4Fの確反
+
+- 2LP(pc), 2MP, 弱グライド-6P
 
 ## シミー
 
@@ -188,10 +177,8 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 弱グライド単発ヒット確認もできるので、できるなら頑張る。
 MK-HK(g), 弱グライドは4F技で割り込まれるので、J.HKをガードされた時はできればMK, 弱グライドにすると割り込まれない。
 
-## 6Fの確反
+## 端の最大確反
 
-- MK(pc), 強スピン, 中ホーン
-
-## 4Fの確反
-
-- 2LP(pc), 2MP, 弱グライド-6P
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜, 弱リンク, MK(+3), ...
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜, LK, 前投げ, ...
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, SA3
