--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -160,6 +160,13 @@ ODグライドは安定する。
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, 弱ホーン, SA3: 5076
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODリンク-Sハーベスト, 中ホーン, SA3: 5180
 
+## 2MP(+4)
+
+- 2MP(+4), 強スピン, 中ホーン: 2640
+- {端} 2MP(+4), 強スピン, 弱ホーン, 強昇竜: 3270
+- 2MP(+4), 強スピン, DR 2MP, SA1, 強昇竜: 3260
+- {端} 2MP(+4), 強スピン, DR 2MP, 強ホーン, SA3: 4817
+
 ## MK
 
 安いけど、MK-HKの確認より少し簡単。
