--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -77,6 +77,8 @@ DR 2MK(g)は五分。
 
 6HP-HP-HPはその場受け身すると投げとシミーの択があるので絶対に後方受け身を取らないといけない。
 
+強/ODスピン, ODホーンに後方受け身すると見えない裏表になるので注意。受け身なしが正しい。バグっぽいからどこかで修正されるかも。
+
 ## ミラーマッチ
 
 エレナ同キャラはMPを多めに振っていくべきかも。あと6HPを6HPで差し返せる。HPで行けるならHPで。
