--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -94,10 +94,11 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## 弱攻撃のコンボ
 
-- 2LP/2LK, 2LP, 弱スピン-リンク
-  - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
-  - Sマレット(g), 前投げ
-  - Sマレット(g), 後退: シミー
+（反撃設定 > ダウンリバーサル: 4F技）
+
+- 2LP/2LK, 2LP, 弱スピン
+  - DR 6MP, MK, ...
+  - DR 2LK, MK, ...
 - 2LP/2LK(g), 2LP, ガード
 
  <!-- ---- この辺りから優先度検討中 ---- -->
