--- a/study/physics/sound/音を構成する要素.md
+++ b/study/physics/sound/音を構成する要素.md
@@ -1,7 +1,7 @@
-1. 強さ（強度）
-2. 高さ（基本周波数、基音）
-3. 音色（倍音の重なり）
-4. 長さ（持続時間）
+1. 音量: 音の強さ
+2. 音高: 基音の周波数
+3. 長さ: 持続時間
+4. 音色: 倍音の重なり
 
 これらで構成される音を横に組み合わせて、リズムやメロディを作る。
 さらに和音は一拍に複数の音が重なっている。
