--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -233,9 +233,9 @@ Dリバの確反ではMK(+4), 2HPが届かないのでこっち。
 
 ## MK-HK
 
-- MK-HK, 強ホーン: 1940
+- MK-HK, 強ホーン: 1940 36F
 - MK-HK, 強昇竜: 2020
-- {端} MK-HK, 弱ホーン, 強昇竜: 2620
+- {端} MK-HK, 弱ホーン, 強昇竜: 2620 24F
 - MK-HK, ODスピン-リンクMK, 中ホーン: 2760
 - MK-HK, CR HP-HP, DR 2MP, 中スピン-リンクMK, 中ホーン: 3216
 - {端} MK-HK, ODスピン-リンクMK, 弱ホーン, 強昇竜: 3130
@@ -380,6 +380,9 @@ MKは近くないと当たらない。
 - {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5873
 
 端はODホーン強昇竜が高い。中昇竜からDIもあり。
+強昇竜はODホーンが端近くでないと3ヒット目の当たり方が違って入らない。中までは安定して入る。
+
+端のODホーン弱昇竜が+38で他の弱昇竜締めと違う。
 
 ## Sハーベスト
 
