--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -125,6 +125,8 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 リンクシンクの強弱で発生が変わるが、当たったら同じ。
 
+1F足りなくて4F技と相打ちでも+8は取れるので、2MPからコンボになる。
+
 ## Sハーベスト: 38-43, 40-45, 41-46, 22-27
 
 リンクシンクの強弱で発生が変わる。当たったら同じ。
