--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -87,10 +87,24 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## Sレオパードを使った攻め
 
-- 6HP-HP-HP, 弱リンク
-  - Sレオパード, ODホーン, 弱リンク, ...
-  - ガード
-  - {端} Sレオパード, ODホーン, 弱昇竜, ...
+（反撃設定 > ダウンリバーサル: 4F技）
+（反撃設定 > ダウンリバーサル: 何もしない）
+（反撃設定 > ガードリバーサル: 4F技）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- Sレオパード(g), 2LP, MK-HK, 強ホーン, 弱リンク-Sレオパード, ...
+- Sレオパード(g), 2LP, MK(g)-HK, 弱グライド, ガード
+- Sレオパード(g), 後退
+- Sレオパード, ODホーン, 弱リンク-Sレオパード, ...
+- {端} Sレオパード, ODホーン, 強昇竜, ...
+
+起き攻めできる状況:
+
+- 6HP-HP-HP
+- DR MK, MK-HK, 中ホーン
+- 2MP, CR MK, 2HP, 強スピン, 中ホーン
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン
+- 2LP, 2LP, 弱スピン-リンク
 
 ## 弱攻撃のコンボ
 
@@ -100,6 +114,21 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - DR 6MP, MK, ...
   - DR 2LK, MK, ...
 - 2LP/2LK(g), 2LP, ガード
+
+## 端の弱昇竜からの攻め
+
+- {端} DR MK, MK-HK, 弱ホーン, 弱昇竜, 弱リンク
+  - MK(+3), MK-HK, 弱ホーン, 弱昇竜, ...
+  - MK(+3)(g), MK, 弱グライド, ガード
+  - 前投げ: 目押しで重ねる
+  - 後退: 最速投げ以外にシミー
+
+## 端の強昇竜からの攻め
+
+- {端} DR MK, MK-HK, 弱ホーン, 強昇竜, LK
+  - MK, 弱グライド
+  - 前投げ
+  - 後退: シミー
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
