--- a/shared/collaboration/organization/組織と個人.md
+++ b/shared/collaboration/organization/組織と個人.md
@@ -89,3 +89,5 @@
 組織の中で飛び抜けた者は分離しないといけない。上司にするのも良くない。上司でも部下でも、体制的に近い位置の者は同じくらいの能力が望ましい。人数が少なかったら独立した遊軍のように使うべきで、多かったら集めてチームや部署にする。研究職なんかが代表的。
 
 組織としての能力は下に揃ってしまう。能力差があれば分離してお互いに影響しないようにするべき。
+
+組織の特色は個人から引き出される。組織も個人の集まりでしかない。
