--- a/shared/music/vocal/training/tips/リズムを取る.md
+++ b/shared/music/vocal/training/tips/リズムを取る.md
@@ -55,3 +55,6 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 
 声や音程が不安定になるとリズムも不安定に聞こえる。
 音楽で重要なのはリズムなので、リズムを取るために発声や音程を安定させる。
+
+まずはピッタリにリズムを合わせて、その上で要所を強調するために走ったり遅れたりする。
+リズムが走ると焦るような印象になるし、遅れると苦しみやだらしなさになったりする。
