--- a/shared/story/telling/物語の書き方.md
+++ b/shared/story/telling/物語の書き方.md
@@ -29,3 +29,5 @@
 プロットとかシナリオとかの前に、全ての場面を読んでいて楽しめるように描写できればなんでも描ける。
 
 最低限必要なのはテーマと描写だけ。プロットやシナリオで見せ場を絞るのは後から考えればいい。
+
+一人称の物語では貧しい表現こそが正しい場合もある。子どもとか。
