--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -19,3 +19,5 @@ https://x.com/kitune6/status/1819901866484093022
 https://x.com/womanhumour/status/1819723107973873958
 
 格下に見られないのが大事。
+
+シャツはできるだけこまめに買い替えた方が色や匂いもないし襟も伸びてないので綺麗。古いのは買った店のリサイクルに出せばいいし。
