--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -6,21 +6,47 @@
 ## 差し合いのヒット確認
 
 - 6HP-HP-HP
-  - ステップ, 前進, 6HP, ...
-  - ステップ, 前進, ガード
+  - 弱リンク-Sレオパード, ODホーン, 弱リンク-Sレオパード, ...
+  - 弱リンク-Sレオパード(g), ガード
+  - 弱リンク, 後退
 - 6HP(g), ガード
 
-起き攻めは多少重なってなくてもいい。
 慣れるまではガードされていても6HP-HPまで出してしまっていい。
 
 ## 昇竜やSAの確反
 
 （確定反撃の練習）
 
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
-  - 弱リンク, 後退
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン
+  - ステップ, 後退
 - {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
   - 弱リンク, 後退
+
+## ラッシュ中攻撃のコンボ
+
+（ダウンリバーサル: 何もしない）
+（ダウンリバーサル: ドライブインパクト）
+
+- DR MK, MK-HK, 強ホーン
+  - ステップ, DR MK, ...
+- DR MK(g), MK, 弱グライド-6P
+  - ステップ, DR MK, ...
+- DR MK(g), MK, 弱グライド(g), ガード
+
+MK持続当ての起き攻めでも使える。
+
+起き上がりインパクトは返す。
+
+## 弱攻撃のコンボ
+
+（ダウンリバーサル: 何もしない）
+（ダウンリバーサル: ドライブインパクト）
+
+- 2LP/2LK, 2LP, 弱スピン, ステップ
+  - 6HP, ...
+  - ガード
+
+起き上がりインパクトは返す。
 
 ## ジャンプ攻撃からのコンボ
 
@@ -66,8 +92,9 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 （ドライブインパクトへの対応練習）
 
-- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, ...
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, ...
+- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 中ホーン
+  - ステップ, 6HP, ...
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱昇竜, ...
 
 起き攻めは確反のルートと同じ。
 
