--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -352,14 +352,13 @@ MKは近くないと当たらない。
 
 ## 強スピン(pc)
 
-- 強スピン(pc)-リンク-MK, 強昇竜: 3380
-- {端} 強スピン(pc)-リンク-MK, 弱ホーン, 弱昇竜: 3740
-- 強スピン(pc)-リンク-MK, SA1, 強昇竜: 4220
-- 強スピン(pc)-リンク-MK, SA1, OD昇竜: 4320
-- 強スピン(pc)-リンク-MK, 中ホーン, SA3: 5220
-- {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, 弱昇竜: 4093
-- {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, SA3: 5843
-- {端} 強スピン(pc)-リンク-LK, DR 2LP, CR HP-HP, DR 2HP, 中スピン-リンク-MK, 中ホーン, SA3: 6313
+- 強スピン(pc)-Sハーベスト, SA1, 強昇竜: 4220
+- 強スピン(pc)-Sハーベスト, SA1, OD昇竜: 4320
+- 強スピン(pc)-Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, SA1, 強昇竜: 4761
+- 強スピン(pc)-Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, ODホーン, SA2: 5365
+- 強スピン(pc)-Sハーベスト, 中ホーン, SA3: 5220
+- {端} 強スピン(pc)-Sレオパード, DR 2LP, 中スピン-Sハーベスト, 弱ホーン, SA3: 5843
+- {端} 強スピン(pc)-Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 6313
 
 ## Sレオパード
 
