--- a/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
@@ -7,12 +7,12 @@ HP(pc)が狙えるならできるだけ狙う。
 
 ## 6F
 
-MKが届くならMK(pc), 強スピンが安定。特にDリバはちょっと離れるのでMK(pc), 2HPが入らない。
+MKが届くならMK(pc), 強スピンが安定。特にDリバはちょっと離れるのでMK(pc), 2HPが入らない。ただ、ヒット確認できないので、リーサルならMK, CR MKでもいい。
 密着ならMK(pc), 2HPが最大。
 
 ## 8F
 
-2MP(pc), 強スピンが遠くても安定。ただ、ヒット確認できないので、2MP, CR MKでもいい。
+2MP(pc), 強スピンが遠くても安定。ただ、ヒット確認できないので、リーサルなら2MP, CR MKでもいい。
 
 ## 12F
 
