--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -304,8 +304,9 @@ MKは近くないと当たらない。
 - HP-HP, ODホーン: 2560
 - {端} HP-HP, ODホーン, 強昇竜: 3400
 - {端} HP-HP, ODホーン, SA1, 強昇竜: 3880
-- HP-HP, SA2: 3840 (3160)
+- HP-HP, SA1, 強昇竜: 3560
 - HP-HP, SA1, SA1, 強昇竜: 3860
+- HP-HP, SA2: 3840 (3160)
 - HP-HP, ODホーン, SA2: 4240
 - HP-HP, ODホーン, SA3: 4560
 
