--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -41,7 +41,14 @@ MKが持続当てしないとあんま強くない。かといって他に重ね
 ## MK(+1): 6-8
 
 - MK(+1), MK-HK
-- MK(+1), MK, 2LP: ど密着のみ
+- MK(+1)(g): +2以上
+  - MK, 2LP/LK
+  - MK, 弱グライド
+  - 投げ
+  - 後退: シミー
+
+ガードされても状況がいい。
+ド密着なら+2から+4で投げも埋まるし、後退はシミーになる。
 
 MK(+1), MKが繋がるのでヒット確認しやすい。
 ガードされても+2以上あるので、投げが入る。MK(+1)なら下がれる。
