--- a/games/Street-Fighter/Six/theory/リソースの管理.md
+++ b/games/Street-Fighter/Six/theory/リソースの管理.md
@@ -16,6 +16,14 @@
 
 相手の体力が減ってきたら、今あるリソースで倒し切れるコンボを意識する。
 
+## 体力ゲージの目盛り
+
+ドライブゲージ6本目の左端がだいたい40%で、体力10000のキャラはクラシックSA3単発で落ちる。
+
+ドライグゲージ5本目の左端がだいたい32%で、体力10000のキャラはモダンSA3単発で落ちる。
+
+ゲージが黄色くなったら25%を切っている。
+
 ## SAゲージ
 
 BO3で1R目を取られてたら、2R目は早めにSA3を吐きたい。3R目はできるだけリーサルに使う。
