--- a/study/politics/authority/上下関係.md
+++ b/study/politics/authority/上下関係.md
@@ -2,3 +2,6 @@
 これは命令系統や階層が不安定だと、どちらかが上を取りに行くようになっている。
 
 儒教的な価値観が強いと、上下関係を決めた方が安心できる人が多い。
+
+上下関係がない組織は「誰もやりたくないが絶対に誰かがやらなければいけない仕事」が発生した瞬間に崩壊する。誰もやらない。
+上下関係があれば、下がやりたくないなら上がやらないといけない。あるいは上が報酬を出して下にやらせる。
