--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -34,6 +34,8 @@ LKを空振りして6HPを止めにくるのを誘ってから6HPで差し返す
 
 中途半端な距離では無理せずバクステやバックジャンプで距離を空けるのもいい。
 
+遅い弾を盾に攻められるのが本当にきつい。舞、ジュリ、あと数はいないけど春麗やガイルも多分きつい。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
