--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -14,6 +14,8 @@
 
 ## 割り切って投げを受け入れる
 
+投げ抜けはしない。
+
 特にわからない攻めでは、ガードから割り込むのも難しい。その場合、割り切って中下段だけ見て、投げを受け入れて、ガードに徹するのはあり。端以外で投げから投げを狙えるキャラはあまりいない。
 
 ## どう守るか
@@ -34,6 +36,10 @@
 投げを読んだら基本はジャンプ。
 
 守りの基本は無敵技と中足ラッシュの逆択。無理やり割り込む。中足ラッシュはガードされても投げや連続ガードから攻めに行ける。
+
+## ラグ対策
+
+ラグいとガードして割り込むのが難しくなるので、無敵技とジャンプでできるだけ凌いだ方がいいかも。グラップも無理。
 
 ## 基本の3種
 
