--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -112,6 +112,8 @@
 - 4F以上遅らせ打撃に当たる（特に垂直跳びとシミー）
 - 投げを抜ける
 
+投げ抜けは本当に限定的な状況でしか使ったらダメで、座学が必要。わからなかったら投げ抜けよりも無敵技とジャンプの二択の方がいい。投げとシミーにはジャンプで勝てるし、打撃と投げには無敵技で勝てる。
+
 垂直跳びとシミーに当たるので、かなりリスクのある行動。無敵技と同じ扱い。
 
 基本的に、グラップするくらいなら無敵技で暴れた方がいい。
@@ -121,6 +123,8 @@
 
 攻め側の有利フレームが短い密着状況（後退で投げ抜けを避けられない状況）では、無敵技でなく投げ抜けで十分。投げ抜けは空振りしなければ咎めにくい。相手はバクステしないといけなくなる。
 たとえばジュリの柔道とか、近めでラッシュしてきた時とか。
+
+後退がシミーにならない場面でもバクステならシミーになるキャラもいる。
 
 ## 遅らせジャストパリィ
 
