--- a/shared/action/手段を選ぶ.md
+++ b/shared/action/手段を選ぶ.md
@@ -3,3 +3,8 @@
 手段を選べないと効率が悪い。
 
 手段を選ぶためには活動を広げて手札を増やした方がいい。
+
+手段には必ず目的がある。
+その手段が目的を達成できないとわかった時点で直ちにやめないといけない。
+
+常に最善の手段を探るのは必須ではないけど、目的に向かっていない手段は直ちにやめないといけない。
