--- a/shared/engagement/エンゲージメントを高める.md
+++ b/shared/engagement/エンゲージメントを高める.md
@@ -90,3 +90,5 @@ https://blog.asana.com/2021/04/ja-quartz-burnout-guide/
 誰かの士気を下げるべきではない。
 
 ムードが悪いとエンゲージメントも下がる。
+
+「パーパス経営」や「ビジョン」のような経営手法もエンゲージメントのため。それでエンゲージメントや誇りにつながらないならやめないといけない。
