--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -7,6 +7,8 @@
 守る側は基本的に無敵技とジャンプ入れっぱの二択でほとんど守れる。ただ、リスクやゲージの問題がある。
 相手が打撃で攻めてくるならわざわざ無敵技でなくてもガードして切り返せばいいだけ。
 
+守りの基本は無敵技とジャンプの二択で、ガードして割り込むのは相手のキャラをよく知っておかないと難しい。
+
 守る側は攻めのターンを取られた時点で不利なので、ガード、ジャンプ、無敵技、のどれでもいい。
 ただ、上位帯ではまず投げとシミーのどちらかが多いので、ジャンプで逃げるところから始めるのはあり。打撃が増えたら、次からはガードで凌ぎやすくなる。
 
