--- a/games/Street-Fighter/ヒット確認のコツ.md
+++ b/games/Street-Fighter/ヒット確認のコツ.md
@@ -9,3 +9,5 @@
 ヒットとガードがある場合、まずはヒットの時にコンボ、ガードの時は何もしない練習をする。
 慣れたら今度はガードの時に固めてヒットの時は何もしない練習をする。
 それにも慣れたら両方できるようにする。
+
+ネットのラグが1F、PS5のラグが2Fあると、確認猶予14Fは反射速度11Fでギリ。
