--- a/shared/collaboration/organization/組織の設計.md
+++ b/shared/collaboration/organization/組織の設計.md
@@ -20,3 +20,7 @@
 
 部署を工程で分けるなら、工程ごとの責任の分界をはっきりさせる。
 その工程で必要な全ての技能はその部署の中で賄えないと後戻りや余計なやりとりが生じる。高凝集にする。
+
+「冴島。サッカーは、勝たなければならない。だがシステムをやるためのサッカーになってもいけない。それでは…選手をただの駒としか見なくなってしまうのだよ。」
+「結局は人間と人間の戦いなのだ。システムしか見ない目は意外ともろく、その本質は弱い。」
+（『アオアシ』）
