--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -37,3 +37,5 @@
 硬い声になっているなら声帯に力が入って硬くなっている。
 
 高音の前に楽に出せる音の発声が悪いとどうにもならない。まずは楽に出せる音の発声や発音を改善するのが優先。
+
+高音になるほど裏返りやすくなる。安易に裏声に逃げていると高音の地声のバランスがわからない。
