--- a/shared/care/tips/自分を知ってもらう.md
+++ b/shared/care/tips/自分を知ってもらう.md
@@ -27,3 +27,6 @@
 「家族はいるか？」「兄弟はいるか？」みたいな質問はまず自分のことから話す。
 
 他人にも知らせておいた方がいいことは何か。何を開示するべきか。
+
+自分を知ってもらうためには、まず相手を知る。
+自分が振ってほしい話題をまず誰かに振って、相手から話題を返してもらうのを待つ。
