--- a/shared/commerce/sales/セールス.md
+++ b/shared/commerce/sales/セールス.md
@@ -42,3 +42,8 @@
 2 個しか売れてなかったものが 3 個売れるのと、すでに 2 万個売れていたものが 3 万個売れるのは同じ 1.5 倍でも残りの需要の点で全く別物。
 
 顧客にとってわかりやすいのは期間と予算による判断で、オーダーメイドの場合はそれによって出来上がるものも変わってくる。
+
+要らないものを売っても買ってもらえない。
+セールスの第一歩は、相手の求めるものを探るところから。
+
+訪問営業する場合でもまず信頼関係を築きながら相手の欲しいものを探る。いきなり売り込まない。御用聞が基礎。
