--- a/shared/training/努力.md
+++ b/shared/training/努力.md
@@ -63,3 +63,5 @@ https://www.youtube.com/watch?v=rTFLOSI5ZNI
 努力しても何かを達成できるとは限らないが、習慣という意味では努力で変えられる。
 
 間違った努力はやればやるほど悪くなる。
+
+努力の方向性が合っているかどうかを常に確認し続けないといけない。
