--- a/shared/trust/creditability/約束.md
+++ b/shared/trust/creditability/約束.md
@@ -16,3 +16,5 @@
 ビジネスマンじゃなかったら約束は守られないと思っていい。その中でも下手に約束しない人は比較的誠実。
 
 プロはとにかく「やります」でいい。できるかどうかわからなくてもいい。ただ、期限と報酬の交渉はその後。優先順位が低かったら「2年後なら空いてます」でもいいし、手間がかかるなら「30億円になります」でもいい。
+
+社交の基礎は約束を忘れないこと。スケジュール帳でもGoogle Calendarでもいいけど特にスケジュールは必ず管理する。
