--- a/shared/voice/training/tips/裏声を出す.md
+++ b/shared/voice/training/tips/裏声を出す.md
@@ -93,3 +93,5 @@ https://youtu.be/zbUnCDf60Mw?si=2RDqUvc5xWrnAmb7
 
 unravelなんかは太い息で頻繁にブレスを入れながら歌う。スタッカートするところは弱くて太い息、レガートはしっかり支えつつも息は太く使う。
 息漏れが多くて、ホイッスルとはまた違う。
+
+柔らかく出したいところも安易に裏声を使うのではなく、まず柔らかい地声から検討するべき。
