--- a/shared/leisure/examples/karaoke/カラオケで場を盛り上げる.md
+++ b/shared/leisure/examples/karaoke/カラオケで場を盛り上げる.md
@@ -68,3 +68,6 @@
 周りがよく歌う曲は軽くでも覚えておいて、合いの手とかハモリとかできるといい。
 
 とりあえず有名どころはデンモクでランキング見ればいい。
+
+カラオケはまずみんなと同じくらいの声量が出ないと共通のマイクを使っても声が聞こえない。
+声が小さい人は普通に盛り下がるのであんま歌わない方がいい。
