--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -94,6 +94,8 @@ DR 2MKよりも攻め継続しやすい。
 
 DR MK(+3)がヒットするとHP-HPも入る。
 
+中央の攻めパターンだと密着できないことが多いので、目押しになりがち。
+
 ## DR 2MK: 16-21
 
 ガードされて五分なのが弱い。
@@ -118,11 +120,13 @@ DR MK(+3)がヒットするとHP-HPも入る。
 単発ヒット確認でさらに起き攻めを狙う。
 ガードされて五分のMKの外。エレナの技が届くのは8Fからなのでキャラによっては微妙な距離。
 
-## {端} DI: 25-26
+## {端} DI: 22-26
 
 - {端} 前投げ
 - {端} 中昇竜
 - {端} ホーン, 2LP
+
+投げに負けないインパクト。
 
 ## DR 6MK: 28-32
 
