--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -1,6 +1,11 @@
 ## 概要
 
-差し合いが強くて、守りが弱い。無理に攻めなくてもいいけど、攻められるなら攻めた方がいい。投げで離れて終わってもいい。
+- 差し合いが強い
+- 中央の攻めが弱い
+- 投げからの攻めが弱い
+- 守りが弱い
+
+無理に攻めなくてもいいけど、攻められるなら攻めた方がいい。投げで離れて終わってもいい。
 攻めもスピンホーンや投げですぐ離れてしまうが、距離があったらまぁなんとかなる。
 
 ## 差し合い
@@ -45,13 +50,6 @@ LKを空振りして6HPを止めにくるのを誘ってから6HPで差し返す
 
 MP/6MK/2MKがだいたい同じくらいの距離。
 この距離だと相手の前飛びに昇竜が当たりづらい。裏に抜けてしまう。あくまでも当てる時に一歩踏み込むイメージで。
-
-## 離れたいとき
-
-とりあえず2LPや2LKで暴れるか、MKを置いてコンボ。
-2LPが長いし、弱スピンからの攻めや弱グライドでいきなり当てに行くのも強い。
-
-相手が中足を狙ってくるなら4HKも下段無敵で強いけど、隙が大きくてジャンプにも弱いので無理して狙わなくていい。2MPラッシュでいい。
 
 ## 差し込み
 
@@ -118,7 +116,7 @@ BOさせた後がなんか弱い。何かないかな。
 
 バクステが長すぎて2MPが届かないので、一度密着するとシミーするのも難しい。
 
-### 中央の攻め
+## 中央の攻め
 
 エレナは中央の攻めが弱い。
 中央はとにかく運び優先で、端の攻めを重視した方がいいかも。
@@ -129,15 +127,24 @@ BOさせた後がなんか弱い。何かないかな。
 
 やっぱりレオパードが弱い。本当に触ってゲージを削るくらいしかできない。
 
-### 端の攻め
+## 端の攻め
 
 中足の距離で中下段も強いし、ひたすら触ってゲージを削るのも強い。
 
 ## 守り
 
-エレナはコパン届かない距離が本当に弱い。技の発生が遅すぎる。
-あとそもそもコパン一発しか届かない距離もきつい。カウンターでもMK届かなかったりするし。弱グライドで暴れるくらい。
+エレナはコパン届かない距離が本当に弱い。技の発生が遅すぎる。MKは短い。
+あとそもそもコパン一発しか届かない距離もきつい。カウンターでもMK届かなかったりするし。弱グライド仕込んで暴れるくらい。
 
 SA1に無敵がないのもあって、一度近づかれると離すのが難しい。昇竜やDリバを積極的に使った方がいいかも。LKもありか。
 
 守りは難しいけど、とにかくHPの差し返しをひたすら一点集中するのが結局強い。発生12Fだけど中央でも3600減るし、画面3/4は押し返せる。
+
+端は2MP, CR MK, 後投げや2MP CR 後投げで入れ替えるのもいい。MP-MPや2MK-HKもヒット確認できるならありだけど難しい。
+
+## 離れたいとき
+
+とりあえず2LPや2LKで暴れるか、MKを置いてコンボ。
+2LPが長いし、弱スピンからの攻めや弱グライドでいきなり当てに行くのも強い。
+
+相手が中足を狙ってくるなら4HKも下段無敵で強いけど、隙が大きくてジャンプにも弱いので無理して狙わなくていい。2MPラッシュでいい。
