--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -5,12 +5,12 @@
 操作が難しすぎてあらゆる技が漏れる。
 コンボに使う必殺技とその強弱が複雑すぎて混乱する。
 
-差し合いがまずトップクラスに強くて、攻めと守りも強い方。
+差し合いはそこそこ強いけど弾がないので圧倒的というほどではない。
 
 ## 総合評価
 
-- 総合: B
-- 差し合い: A
+- 総合: B-
+- 差し合い: B
 - 攻め: B
   - 中央で攻めが切れやすい
 - 守り: C
