--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -10,6 +10,8 @@
 
 ## 差し合い
 
+長い前強、長い中下段、リンクシンクで差し込みは強いけど、差し返しが弱い。
+
 6HPが長くて高くて状況も悪くない。
 ただ、発生前は結構判定が前に出るので注意。
 
@@ -77,20 +79,31 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 
 ## 差し返し
 
-基本的にはMPで、相手が隙の多い技を振ってくるならHPが一番。
+- 2MP: 発生8F、強スピンならリターンが大きいけど弱グライドでもいい
+- HP: 発生12F、中央でも3600、端で4000減る
+- 2HK: 発生11F、遠めの大足確反とか
+- 6HP: 発生17F、かなり遠めでも届きやすい
 
-- MP-MP: 発生8F、2MPより長い
-- HP: 発生12F、中央でも3600減る
-- 2HK: 発生11F、遠めの確反とか
+差し返しは弱い。
+特に中足に差し返す技がなくて、相手の中足が届く距離は下がらないといけない。
+
+基本的には2MPが使いやすい。
+ただ、低い姿勢に当たりにくいのがネック。MPも同様。
+
+昇竜やSAの確反はHPにする。
+差し合いでもHPで返せるなら一番いいけど、意外と短い。
+
+6HPは差し返しというよりも、相手の空振りで有利フレームをもらってからとりあえずガードさせるつもりで振る。
 
 差し返しよりも、いっそ-1からMKを置く方が強いかも。8Fの中足を潰す狙い。
 
 ## 牽制
 
-- MP: MP-MPを仕込んで置く
-- MK: MK-HKやラッシュを仕込んで置く
+- LK: 全体18F、弱グライドを仕込んだり、リスクをとって弱スピンを仕込んだり
+- MP: 全体27F、MP-MPを仕込んで置く
+- MK: 全体24F、MK-HKやラッシュを仕込んで置く
 - 2MP: 弱グライドやラッシュを仕込んで置く
-- 4HK: 下段に強い
+- 2MK-HK: 下段
 
 ## 対空
 
