--- a/games/Street-Fighter/Six/characters/Ken/ケンの対策.md
+++ b/games/Street-Fighter/Six/characters/Ken/ケンの対策.md
@@ -48,6 +48,9 @@ SA3があったらインパクトは危険。
 
 迅雷脚はまずジャストパリィを狙って、相手が止めてくるようなら7F以下の中攻撃で割り込みも狙う。
 
+ケンの迅雷脚はV3で弱派生をカウンターで食らうと転ぶようになったので、弱派生を出すか出さないかの読み合いのリスクが低くなった。
+困ったらとりあえず6F以下のできるだけ長い技で暴れるといい。
+
 ## 龍尾脚
 
 発生前にインパクトを出せたら確定する。
