--- a/shared/collaboration/organization/組織の意思決定.md
+++ b/shared/collaboration/organization/組織の意思決定.md
@@ -1,2 +1,6 @@
 組織の意思決定で重要なのは「決めたら従う」ということ。
 これができない人は排除しないといけない。
+
+社長のように決裁権を持っている人が最初から前に出てしまうとその場で判断できてしまうので、間に人を挟んで判断を遅らせる手法もある。
+
+逆に、セールスではできるだけ強い決裁権を持っている人に初めからアクセスしないといけない。
