--- a/shared/voice/training/tips/息を抑える.md
+++ b/shared/voice/training/tips/息を抑える.md
@@ -10,3 +10,7 @@ tやsの空気音がうるさすぎる場合、息を吐きすぎている。横
 声を出すために息を吐こうとしない。むしろ抑えるように歌う。
 
 喉で息を押さえようとするとこもったような声になる。腹で息を抑えないといけない。
+
+声を出す時は息を止める。
+
+息を吸って、胸のあたりで息を止める。このとき動いたあたりが声帯。常にここで声を出す。
