--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -177,3 +177,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 喉を下げるというよりは、顎と喉を離すような感覚かも。喉をとにかく下げようとすると顎や舌で下げようとしがち。
 
 喉を下げると声が低くなって暗く重くなりがち。明るく軽い声も意識して出せるようにしたい。
+
+声帯で音を鳴らすことと喉を下げることは分ける。喉を上げて子どもっぽい声で歌うのも一つの表現。
