--- a/shared/education/教養.md
+++ b/shared/education/教養.md
@@ -30,3 +30,5 @@
 
 > この石抱きという拷問、江戸期には主君殺しとキリシタンにしか用いられなかったそうなので、このカッパはキリシタンであり頭のこれは皿ではなくトンスラである可能性が高い。
 > https://x.com/Iwatekko6969/status/1841782624450445781
+
+褒めているように見せかけて貶すには教養が必要。相手にも教養が必要。
