--- a/shared/work/能力.md
+++ b/shared/work/能力.md
@@ -80,3 +80,6 @@
 どれだけ能力があってもカスみたいな人間はいる。
 
 一人前はスタートライン。二人前、三人前、とさらに強くなっていく。
+
+読書というか文字を読む習慣がある人はそれだけで全然仕事の効率が違う。内容はなんでもいい。長い文字が読めることに意味がある。
+文字を読む習慣がない人はメールやチャットが使えない。
