--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -63,3 +63,5 @@
 社交的な会話では前置きが大事。猿の毛繕いみたいなもの。会話の内容よりもまず、相手への気遣いを見せる。
 
 社交の基礎は挨拶、笑顔、配慮の3点セット。特に相手のために自分から積極的に動く配慮が大事。
+
+女性は社交が強くて仕事が弱い。社交が好きな人は仕事向きではない。
