--- a/shared/education/教養.md
+++ b/shared/education/教養.md
@@ -32,3 +32,6 @@
 > https://x.com/Iwatekko6969/status/1841782624450445781
 
 褒めているように見せかけて貶すには教養が必要。相手にも教養が必要。
+
+日本は教養がない人が多いので、教養がなくても困らない。
+教養は内輪ネタなので、誰も内輪ネタがわからないところで持っていても意味がない。
