--- a/shared/execution/planning/計画づくりのコスト.md
+++ b/shared/execution/planning/計画づくりのコスト.md
@@ -3,3 +3,5 @@
 例えば、遠くの友達に会いに行く前に電話して予定を聞く工程を挟むとか。
 
 計画にかけるコスト以上にコストやリスクを下げられないなら、すぐに計画をやめて実行しなければならない。
+
+計画していいのは、計画によって計画にかかった時間よりも多くの時間やリスクを削減できる時だけ。
