--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -285,6 +285,19 @@ MKは近くないと当たらない。
 
 - 6MK-MK: 1200
 
+## 6MK(+2)
+
+- 6MK(+2), 2LP, 弱スピン: 1620
+- {端立} 6MK(+2), 2LP, 弱ホーン, 中昇竜: 2500
+- 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 2596
+- {端} 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン: 2717
+- {端} 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 強昇竜: 2800
+- 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, SA1, 強昇竜: 3044
+- 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, SA2: 3308 (h: 2968)
+- 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, SA2: 3512 (h: 3172)
+- {端} 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, 中ホーン, SA3: 4596
+- 6MK(+2), 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4717
+
 ## 6MK(+4)
 
 - 6MK(+4), MK-HK, 強昇竜: 2400
