--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -5,52 +5,83 @@
 - {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
 - {端} 弱/強昇竜: 端のコンボの〆で頻出
 
+## +4/+5
+
+- 2LK, 2LP: 下段
+- MK
+- MK-HK, 弱グライド: 入れ込みで簡単、5F技で割り込まれる
+- 前投げ
+
+ド密着だと遅らせ投げ抜けに弱いので、後退がシミーになるように調整すると強い。
+
+## +8
+
+- MK(+3)(g): +4
+  - 後退: シミー
+- 後退: 最速投げ以外にシミー
+- 垂直J.HK: 通常投げにパニカン
+
+ド密着にするとMK(+3)のあと投げが届く。
+基本的にはシミーを狙うよりも一旦重ねた方がいい。
+
+## +21
+
+- 6MK(+2): 中段の持続当て
+
 ## {端} +22
 
-- {端} LK: +4
+- LK: +4
   - 後退: シミー
-- {端} 2LP: +8
-  - 後退: 最速投げ以外にシミー
+- 2LP: +8
+- DI: 投げで割り込めない
 
 ## {端} +23
 
-- {端} LK: +5
+- LK: +5
   - 後退: シミー
-- {端} 2LK: +8
-  - 後退: 最速投げ以外にシミー
+- 2LK: +8
+- DI: 投げで割り込めない
 
 ## {端} +26
 
-- {端} LK: +8
+- LK: +8、ド密着ではない
   - 後退: シミー
+- DI: 投げで割り込めない
+
+中昇竜から。
 
 後退がシミーになりつつ持続当ても狙える。投げは目押し。
+ド密着ではないので、MK(+3)のあと投げが届かない。
 
 ## {端} +34
 
-- {端} 2MK: +5
+- 2MK: +5
   - 後退: シミー
-- {端} 2LK, 2LP: +8、連打キャンセルで繋ぐ
-  - 後退: 最速投げ以外にシミー
+- 2LK, 2LP: +8 (連打キャンセルで繋ぐ)
 
 弱スピンから。
 
 ## {端} +36
 
-- {端} 弱リンク: +8
-  - MK(+3)
-  - 垂直J.HK: 通常投げにパニカン
-  - 後退: 最速投げ以外にシミー
-- {端} 2LK: +21
-  - 6MK(+2): 中段の持続当て
-  - LK, 前投げ: +3から投げ
+- 弱リンク: +8
+- 2LK: +21
 
-## {端} +39/+40
+弱昇竜やMK-HK, 強ホーンから。
 
-- {端} HP: +4/+5
+## {端} +39
+
+- HP: +4
+  - 後退: シミー
+- LK: +21
+
+地上の通常グライドや通常ホーンから。
+
+## {端} +40
+
+- HP: +5
   - 後退: シミー
 
-フレーム消費して後退がシミーになる。
+主に6HP-HP-HPから。
 
 ## {空} 2MP, 中スピン-Sハーベスト, 中ホーン: 36
 
@@ -561,35 +592,25 @@ ODホーンの3段目が端専用の当たり方をしないと入らない。
 ## Sレオパード(g): 1
 
 - 後退: シミー
-- MK: 5F遅れ、ヒット確認で2LP
+- 2LP
+  - 2LP, 弱スピン: ヒット確認でコンボ、ガードされると届かない
+  - LK, 強昇竜: ヒット確認でコンボ、ガードされると6Fまで割り込まれる
+  - MK-HK: カウンターでコンボ、ガードから後退されると届かない
 - MK, 弱グライド: 5F遅れ
-- 2LP, MK: ヒットすると無敵技以外で割り込めない、カウンターで繋がるので、暴れ読みで入れ込み、MK, 弱グライドが届かない
-
-- 2LP, LK: ヒット確認してコンボ、ノーゲージは昇竜か立ちヒット確認が必要
-- MK, 弱グライド: 5F遅れ
-- 2LP, 弱グライド: 2LP(g), 弱グライドだと間が11F、2LPがヒットすると無敵技以外で割り込めない
-- 後退: シミー
-- 2LP, 2LP: ガードされると届かない
-- 2LK, 2LP: 後退されると届かない
-- MK-HK, 弱グライド: 中央ではガードされないと届かない
+- 2MK: 8F遅れ、立ち確認してグライド
 
 フレーム的には微有利だけど、相手が端か後退で投げ間合いの外になる。弱攻撃も1発しか届かない。
 
-## Sマレット: 4
-
-Sマレット(g)と基本的に同じでいい。
-当たっていても+4しかないので、通常投げで補正切りにいったり、MKから攻め継続したり。
-
-まぁ、弱スピン-リンクでも1810は減るので、基本的にはコンボでさらにおかわりするといい。
+後退に弱いのに使える下段が2MKくらいしかない。
 
 ## Sマレット(g): 3
 
-スピンからもリンクに派生できる。
-
-- 通常投げ
+- 投げ
 - 後退: シミー
 - 2LK, 2LP
 - MK
+
+スピンからもリンクに派生できる。
 
 ## 弱昇竜: 36
 
