--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -134,7 +134,15 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 ## Sレオパード: 38-44, 40-46, 41-47, 22-28
 
+本命はマレット。
+レオパードはあくまでも相手の暴れを潰すための択。
+
+ガードされると微有利だけど、遠くてむしろ状況が悪い。
+
+発生から1F以内に重ねる（弱であれば+39から）とインパクトも返せる。
+
 リンクシンクの強弱で発生が変わるが、当たったら同じ。
+リンクスワールにも強弱があって移動距離が違うけど発生は同じ。
 
 1F足りなくて4F技と相打ちでも+8は取れるので、2MPからコンボになる。
 
