--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -128,6 +128,8 @@ MKや2HPは近くないと届かないので2MPの方が確実。
 モダンは少し安いけど、状況がいいし、立ち確認だけでいいし。
 ホーンや昇竜は起き攻めが弱いし、スピン-リンクは火力が低すぎる。
 
+MPパニカン時は強制立たせ効果がある。
+
 ## 2MP, グライド
 
 2MP単発のヒット確認は厳しいので、グライドまで入れ込んでからヒット確認して派生させる。
