--- a/games/Street-Fighter/Six/system/ドライブインパクト.md
+++ b/games/Street-Fighter/Six/system/ドライブインパクト.md
@@ -56,3 +56,5 @@
 ドライブインパクトはインパクトで返すよりもパリィする方が無難。インパクト返しはボタンが早すぎると出ない。特に端ではガードもしたくない。
 
 ドライブインパクトは最低でもパリィしたい。ガードしても削られるし、端では壁やられもある。
+
+体力が500を切ったらインパクトを返しても削り切られてしまう。体力がなかったらOD技やSA、投げで返せるように意識しないといけない。BOした時に近い。
