--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -90,6 +90,7 @@ MKや2HPは近くないと届かないので2MPの方が確実。
 - {端} 2LK(+4), MK-HK, 弱ホーン, 強昇竜: 2100
 - 2LK(+4), MK-HK, ODスピン-Sハーベスト, 中ホーン: 2120
 - 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 2295
+- 2LK(+4), MK-HK, ODスピン-Sハーベスト, 中ホーン, SA3: 4120
 - 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4295
 
 ## MP(+1)
