--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -696,6 +696,10 @@ ODホーンの3段目が端専用の当たり方をしないと入らない。
 - DR 2LK/2MK: 下段、目押しで重ねる
 - DR 6MK: 中段、7F遅れ
 
+## CA: 29
+
+SA3より有利フレームは伸びるけど、中央は遠い
+
 ## {端} DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜: 36
 
 - {端} +36
