--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -5,11 +5,10 @@
 
 ## 差し合いのヒット確認
 
+- 6HP(g), ガード
 - 6HP-HP-HP
   - 弱リンク, 後退
-  - 弱リンク-3Sレオパード, ODホーン, 弱リンク-Sレオパード, ...
-  - 弱リンク-3Sレオパード(g), 後退
-- 6HP(g), ガード
+  - 弱リンク-Sレオパード, ...
 
 ## ラッシュ中下段
 
