--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -126,8 +126,10 @@ MK持続当ての起き攻めでも使える。
 
 - {端} DR MK, MK-HK, 弱ホーン, 弱昇竜, 弱リンク
   - MK(+3), MK-HK, 弱ホーン, 弱昇竜, ...
-  - MK(+3)(g), MK, 弱グライド, ガード
-  - 前投げ: 目押しで重ねる
+  - MK(+3)(g)
+    - MK, 弱グライド, ガード
+    - 前投げ
+    - 後退
   - 後退: 最速投げ以外にシミー
 
 ## 端の強昇竜からの攻め
