--- a/games/Street-Fighter/Six/theory/リソースの管理.md
+++ b/games/Street-Fighter/Six/theory/リソースの管理.md
@@ -16,6 +16,8 @@
 
 相手の体力が減ってきたら、今あるリソースで倒し切れるコンボを意識する。
 
+リーサルとは別に、インパクトを返せない体力500以下にしたり、投げで終わる体力1200〜1500以下にしたりするのも大事。
+
 ## 体力ゲージの目盛り
 
 ドライブゲージ6本目の左端がだいたい40%で、体力10000のキャラはクラシックSA3単発で落ちる。
