--- a/shared/business/tips/フランチャイズ.md
+++ b/shared/business/tips/フランチャイズ.md
@@ -3,3 +3,5 @@
 フランチャイズでは家業にならないので、子どもに遺せるわけでもないし、経営ごっこのようなものだ。
 
 本体が責任を負ってもいないし。
+
+フランチャイズでは、本社とは別にフランチャイズ側も企業が経営する場合がある。店舗を経営する企業が倒産すると店舗がまとめて閉店することがある。こうなると本社も傾いたと思われて評判が悪い。
