--- a/shared/government/administration/治安維持.md
+++ b/shared/government/administration/治安維持.md
@@ -6,3 +6,5 @@ https://x.com/ETH_GR0UP/status/1737299018668257688?s=20
 仏像を建てたりして権威を示すのは治安維持のため。
 
 人類はひまになると革命を起こしがちなので、労働で削っておくのも治安のために必要ではある。
+
+医者と警察は暇な方が良い。
