--- a/shared/music/vocal/training/tips/歌詞カードを作る.md
+++ b/shared/music/vocal/training/tips/歌詞カードを作る.md
@@ -18,6 +18,16 @@
 - 声色の変化や表現（しっとりと、とか、踊るように、とか）
 - 変調の位置
 
+## 記載方法の案
+
+- {XXX bpm X/X}: テンポと拍子
+- ^: ブレス
+- /: スタッカート
+- →: 溜め
+- ←: 走り
+- 〜: ロングトーン
+- 太字: アクセント
+
 ## その他
 
 歌詞カードを作っても、カラオケでは歌詞を完全に覚えるか、画面に出る歌詞から歌詞カードの情報を思い出せるようにした方が便利。いちいち歌詞カードを取り出すのはめんどい。
