--- a/shared/communication/frameworks/assertion/根拠.md
+++ b/shared/communication/frameworks/assertion/根拠.md
@@ -121,3 +121,5 @@ explanation も参照。
 証拠や根拠は誰かを納得させるためのもので、別に相手が納得しなくてもいいなら必要ない。権力や暴力でねじ伏せるとか、すでに相手が誰からも大事にされてないとか。
 
 根拠も示さずに「自分は正しい」というやつは正しくない。
+
+根拠を示しても、信用がないと、そもそも根拠を信用してもらえない。
