--- a/games/Street-Fighter/Six/theory/差し合いの基本.md
+++ b/games/Street-Fighter/Six/theory/差し合いの基本.md
@@ -153,3 +153,10 @@
 基本的に差し合いはラッシュを止める小パンか中パン、弾や突進技を受けるパリィあたりに指を置いておきたい。差し合いのインパクトは最悪技を振る時だけでいい。
 
 キャンセルラッシュは連続ガードにならなかったら無敵技が確定するので、基本的には無敵技を仕込むのが無難。連続ガードの時は出ないように気を付ける。
+
+相手が牽制技を振ってくるなら差し返しを狙う。
+相手が踏み込んでくるなら牽制する。
+相手が差し返しを狙うなら踏み込む。
+このどれか一つが欠けているなら、ひたすら弱点をつく。
+
+こちらが踏み込むからこそ相手も牽制技を振ってくる。そうなったら次は差し返しを狙う。そしたら今度は相手が踏み込んでくる。この読み合いの繰り返し。
