--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -39,3 +39,5 @@
 高音の前に楽に出せる音の発声が悪いとどうにもならない。まずは楽に出せる音の発声や発音を改善するのが優先。
 
 高音になるほど裏返りやすくなる。安易に裏声に逃げていると高音の地声のバランスがわからない。
+
+高音域は声帯をしっかり閉じないと息が漏れる。いわゆるミックスボイスのレッスンで息と声のバランスと言われるのは、鍛えてないと息が漏れるので、できるだけ漏らさないようにするってこと。あえて息を混ぜる必要は全くない。単に鍛えてないと息が漏れるのは仕方ないってだけ。
