--- a/shared/trust/どこまで信頼するか.md
+++ b/shared/trust/どこまで信頼するか.md
@@ -5,3 +5,5 @@
 約束したことを守れるかどうかが重要。期限を守れない場合も信頼度を落とす。
 
 バナナは味を信頼するべきで、釘を打つ機能を期待するべきではない。必要な機能だけを見て信頼して、それだけを任せる。
+
+信頼する必要がないところは信頼しない。たとえば仲が良くても貴重品を置いて席を立たない。誰が相手でも貴重品は持ち歩けばいい。
